add local  change

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,3 +1,39 @@
 {
-  "auto": "Auto"
+  "auto": "Auto",
+  "light": "Light",
+  "dark": "Dark",
+  "connect_robot": "Connect To Robot",
+  "ip_address": "IP Address",
+  "port": "Port",
+  "robot_type": "Robot Type",
+  "default_config_template": "Default Config Template",
+  "max_speed": "Max Speed",
+  "max_y_speed": "Max Y Speed",
+  "max_angular_speed": "Max Angular Speed",
+  "map_frame": "Map Frame",
+  "odom_frame": "Odom Frame",
+  "base_frame": "Base Frame",
+  "laser_frame": "Laser Frame",
+  "map_topic": "Map Topic",
+  "laser_topic": "Laser Topic",
+  "global_path_topic": "Global Path Topic",
+  "local_path_topic": "Local Path Topic",
+  "reloc_topic": "Reloc Topic",
+  "nav_goal_topic": "Nav Goal Topic",
+  "odometry_topic": "Odometry Topic",
+  "speed_ctrl_topic": "Speed Ctrl Topic",
+  "battery_topic": "Battery Topic",
+  "save": "Save",
+  "cancel": "Cancel",
+  "image_topic": "Image Topic",
+  "screen_orientation": "Screen Orientation",
+  "connect_error": "Connect ROS failed, please check IP and port",
+  "edit": "Edit",
+  "config_saved": "Config saved, restart app to take effect",
+  "ok": "OK",
+  "image_port": "Image Port",
+  "image_width": "Image Width",
+  "image_height": "Image Height",
+  "confirm_change": "Confirm Change",
+  "switch_template_will_reset_all_settings": "Switch template will reset all settings"
 }
