--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -1,3 +1,39 @@
 {
-  "auto": "自动"
+  "auto": "自动",
+  "light": "浅色",
+  "dark": "暗色",
+  "connect_robot": "连接机器人",
+  "ip_address": "IP地址",
+  "port": "端口",
+  "robot_type": "机器人类型",
+  "default_config_template": "默认配置模版",
+  "max_speed": "最大前进速度",
+  "max_y_speed": "最大横向速度",
+  "max_angular_speed": "最大角速度",
+  "map_frame": "地图坐标系",
+  "odom_frame": "里程计坐标系",
+  "base_frame": "机器人坐标系",
+  "laser_frame": "激光雷达坐标系",
+  "map_topic": "地图话题",
+  "laser_topic": "激光雷达话题",
+  "global_path_topic": "全局路径话题",
+  "local_path_topic": "局部路径话题",
+  "reloc_topic": "重定位话题",
+  "nav_goal_topic": "导航目标话题",
+  "odometry_topic": "里程计话题",
+  "speed_ctrl_topic": "速度控制话题",
+  "battery_topic": "电池状态话题",
+  "save": "保存",
+  "cancel": "取消",
+  "image_topic": "图像话题",
+  "screen_orientation": "屏幕方向",
+  "connect_error": "连接ROS失败，请检查IP和端口是否正确",
+  "edit": "编辑",
+  "config_saved": "设置已保存，重启应用后生效",
+  "ok": "确定",
+  "image_port": "图像端口",
+  "image_width": "图像宽度",
+  "image_height": "图像高度",
+  "confirm_change": "确认切换",
+  "switch_template_will_reset_all_settings": "切换模板将重置所有设置"
 }
