--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -45,5 +45,7 @@
   "setting": "Setting",
   "basic_setting": "Basic Setting",
   "topic_setting": "Topic Setting",
-  "app_setting": "APP Setting"
+  "app_setting": "APP Setting",
+  "robot_footprint_topic": "robot foot print topic",
+  "local_cost_map_topic": "local cost map topic"
 }
