fix fixframe robot pose show bug

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -47,5 +47,6 @@
   "topic_setting": "Topic Setting",
   "app_setting": "APP Setting",
   "robot_footprint_topic": "robot foot print topic",
-  "local_cost_map_topic": "local cost map topic"
+  "local_cost_map_topic": "local cost map topic",
+  "pointcloud2_topic": "point cloud topic"
 }
