--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -48,5 +48,6 @@
   "app_setting": "APP设置",
   "robot_footprint_topic": "机器人尺寸话题",
   "local_cost_map_topic": "局部代价地图话题",
-  "pointcloud2_topic": "点云话题"
+  "pointcloud2_topic": "点云话题",
+  "global_costmap_topic": "全局代价地图话题"
 }
