manual mode not allow send nav goal

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -46,8 +46,26 @@
   "basic_setting": "Basic Setting",
   "topic_setting": "Topic Setting",
   "app_setting": "APP Setting",
-  "robot_footprint_topic": "robot foot print topic",
-  "local_cost_map_topic": "local cost map topic",
-  "pointcloud2_topic": "point cloud topic",
-  "global_costmap_topic": "global cost map topic"
+  "robot_footprint_topic": "Robot Footprint Topic",
+  "local_cost_map_topic": "Local Cost Map Topic",
+  "pointcloud2_topic": "Point Cloud Topic",
+  "global_costmap_topic": "Global Cost Map Topic",
+  "not_allow_send_nav_goal": "Current mode is not allow to send navigation goal, please checkout to normal mode!",
+  "gamepad_mapping": "Gamepad Mapping",
+  "remap": "Remap",
+  "start_mapping_message": "Please push the joystick or button to this position to start mapping",
+  "mapping_reset": "Mapping has been reset to default settings",
+  "left_stick_x": "Left Stick X",
+  "left_stick_y": "Left Stick Y",
+  "right_stick_x": "Right Stick X",
+  "right_stick_y": "Right Stick Y",
+  "button_a": "Button A",
+  "button_b": "Button B",
+  "button_x": "Button X",
+  "button_y": "Button Y",
+  "camera_fixed_no_layer": "Cannot adjust layers when camera view is fixed!",
+  "switch_to_normal_mode": "Please switch to normal mode first, then click navigation point",
+  "emergency_stop_triggered": "Emergency stop triggered!",
+  "stop_nav": "Stop Navigation",
+  "stop": "Stop"
 }
