--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -49,5 +49,23 @@
   "robot_footprint_topic": "机器人尺寸话题",
   "local_cost_map_topic": "局部代价地图话题",
   "pointcloud2_topic": "点云话题",
-  "global_costmap_topic": "全局代价地图话题"
+  "global_costmap_topic": "全局代价地图话题",
+  "not_allow_send_nav_goal": "当前模式不允许下发导航模式，请切换至普通模式!",
+  "gamepad_mapping": "手柄按键映射",
+  "remap": "重新映射",
+  "start_mapping_message": "请推动摇杆或按键至该位置，开始映射",
+  "mapping_reset": "映射已恢复默认设置",
+  "left_stick_x": "左摇杆 X",
+  "left_stick_y": "左摇杆 Y",
+  "right_stick_x": "右摇杆 X",
+  "right_stick_y": "右摇杆 Y",
+  "button_a": "按钮 A",
+  "button_b": "按钮 B",
+  "button_x": "按钮 X",
+  "button_y": "按钮 Y",
+  "camera_fixed_no_layer": "相机视角固定时不可调整图层！",
+  "switch_to_normal_mode": "请先切换到正常模式,再点击导航点",
+  "emergency_stop_triggered": "已触发急停！",
+  "stop_nav": "停止导航",
+  "stop": "停止"
 }
