use flame to show display

--- a/lib/language/l10n/app_en.arb
+++ b/lib/language/l10n/app_en.arb
@@ -67,5 +67,32 @@
   "switch_to_normal_mode": "Please switch to normal mode first, then click navigation point",
   "emergency_stop_triggered": "Emergency stop triggered!",
   "stop_nav": "Stop Navigation",
-  "stop": "Stop"
+  "stop": "Stop",
+  "layer_grid": "Grid Layer",
+  "layer_global_costmap": "Global Cost Map",
+  "layer_local_costmap": "Local Cost Map",
+  "layer_laser": "Laser Data",
+  "layer_pointcloud": "Point Cloud Data",
+  "layer_global_path": "Global Path",
+  "layer_local_path": "Local Path",
+  "layer_topology": "Topology Map",
+  "map_edit": "Map Edit",
+  "zoom_in": "Zoom In",
+  "zoom_out": "Zoom Out",
+  "center_on_robot": "Center on Robot",
+  "exit": "Exit",
+  "layers": "Layers",
+  "reloc": "Relocalization",
+  "camera": "Camera",
+  "manual_control": "Manual Control",
+  "emergency_stop": "Emergency Stop",
+  "stop_navigation": "Stop Navigation",
+  "open_file": "Open File",
+  "save_file": "Save File",
+  "undo": "Undo",
+  "redo": "Redo",
+  "exit_edit_mode": "Exit Edit Mode",
+  "add_nav_point": "Add Navigation Point",
+  "draw_obstacle": "Draw Obstacle",
+  "erase_obstacle": "Erase Obstacle"
 }
