--- a/lib/language/l10n/app_zh.arb
+++ b/lib/language/l10n/app_zh.arb
@@ -67,5 +67,32 @@
   "switch_to_normal_mode": "请先切换到正常模式,再点击导航点",
   "emergency_stop_triggered": "已触发急停！",
   "stop_nav": "停止导航",
-  "stop": "停止"
+  "stop": "停止",
+  "layer_grid": "网格图层",
+  "layer_global_costmap": "全局代价地图",
+  "layer_local_costmap": "局部代价地图",
+  "layer_laser": "激光雷达数据",
+  "layer_pointcloud": "点云数据",
+  "layer_global_path": "全局路径",
+  "layer_local_path": "局部路径",
+  "layer_topology": "拓扑地图",
+  "map_edit": "地图编辑",
+  "zoom_in": "放大",
+  "zoom_out": "缩小",
+  "center_on_robot": "定位到机器人",
+  "exit": "退出",
+  "layers": "图层",
+  "reloc": "重定位",
+  "camera": "相机",
+  "manual_control": "手动控制",
+  "emergency_stop": "急停",
+  "stop_navigation": "停止导航",
+  "open_file": "打开文件",
+  "save_file": "保存文件",
+  "undo": "撤销",
+  "redo": "重做",
+  "exit_edit_mode": "退出编辑模式",
+  "add_nav_point": "添加导航点",
+  "draw_obstacle": "绘制障碍物",
+  "erase_obstacle": "擦除障碍物"
 }
